Update theme extension voor V4 prompt

--- a/extensions/chat-bubble/blocks/chat-interface.liquid
+++ b/extensions/chat-bubble/blocks/chat-interface.liquid
@@ -56,19 +56,11 @@
       "label": "Chatbot Type",
       "options": [
         {
-          "value": "standardAssistant",
-          "label": "Standaard Assistent"
-        },
-        {
-          "value": "enthusiasticAssistant",
-          "label": "Enthousiaste Assistent"
-        },
-        {
-          "value": "fournitureExpert",
-          "label": "Fournituren Expert"
+          "value": "fournitureExpertNL_V4",
+          "label": "Fournituren Expert V4"
         }
       ],
-      "default": "fournitureExpert"
+      "default": "fournitureExpertNL_V4"
     }
   ]
 }
